# backend/src/main/java/at/ac/tuwien/sepm/groupphase/backend/endpoint/dto/ShowSearchDto.java
@@ -36,6 +36,12 @@ public class ShowSearchDto   {
   @JsonProperty("seatingPlan")
   private Integer seatingPlan;
 
+  @JsonProperty("location")
+  private Long location;
+
+  @JsonProperty("eventId")
+  private Long eventId;
+
   public ShowSearchDto event(String event) {
     this.event = event;
     return this;
@@ -112,6 +118,44 @@ public class ShowSearchDto   {
     this.seatingPlan = seatingPlan;
   }
 
+  public ShowSearchDto location(Long location) {
+    this.location = location;
+    return this;
+  }
+
+  /**
+   * Get location
+   * @return location
+  */
+  
+  @Schema(name = "location", required = false)
+  public Long getLocation() {
+    return location;
+  }
+
+  public void setLocation(Long location) {
+    this.location = location;
+  }
+
+  public ShowSearchDto eventId(Long eventId) {
+    this.eventId = eventId;
+    return this;
+  }
+
+  /**
+   * Get eventId
+   * @return eventId
+  */
+  
+  @Schema(name = "eventId", required = false)
+  public Long getEventId() {
+    return eventId;
+  }
+
+  public void setEventId(Long eventId) {
+    this.eventId = eventId;
+  }
+
   @Override
   public boolean equals(Object o) {
     if (this == o) {
@@ -124,12 +168,14 @@ public class ShowSearchDto   {
     return Objects.equals(this.event, showSearch.event) &&
         Objects.equals(this.date, showSearch.date) &&
         Objects.equals(this.price, showSearch.price) &&
-        Objects.equals(this.seatingPlan, showSearch.seatingPlan);
+        Objects.equals(this.seatingPlan, showSearch.seatingPlan) &&
+        Objects.equals(this.location, showSearch.location) &&
+        Objects.equals(this.eventId, showSearch.eventId);
   }
 
   @Override
   public int hashCode() {
-    return Objects.hash(event, date, price, seatingPlan);
+    return Objects.hash(event, date, price, seatingPlan, location, eventId);
   }
 
   @Override
@@ -140,6 +186,8 @@ public class ShowSearchDto   {
     sb.append("    date: ").append(toIndentedString(date)).append("\n");
     sb.append("    price: ").append(toIndentedString(price)).append("\n");
     sb.append("    seatingPlan: ").append(toIndentedString(seatingPlan)).append("\n");
+    sb.append("    location: ").append(toIndentedString(location)).append("\n");
+    sb.append("    eventId: ").append(toIndentedString(eventId)).append("\n");
     sb.append("}");
     return sb.toString();
   }
